--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-selenium==4.1.3
-Pillow==9.1.0
+selenium==3.141.0
+pillow==8.4.0
 discord.py==1.7.3
 emoji==1.7.0
-matplotlib==3.5.2
-loguru
-pyvirtualdisplay
+loguru==0.6.0
+pyvirtualdisplay==3.0
+webdriver_managersele==3.7.0
