--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ discord.py==1.7.3
 emoji==1.7.0
 loguru==0.6.0
 pyvirtualdisplay==3.0
-webdriver_managersele==3.7.0
+webdriver_manager==3.7.0
 pyyaml==6.0
 #sudo apt-get install libxml2-dev libxslt-dev 
-yfinance-0.1.70
+yfinance==0.1.70
